<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24dp"
            android:title="@string/nav_home"></item>

        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorites_24dp"
            android:title="@string/nav_favorites"></item>
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_general_setting"
            android:title="@string/nav_general_setting">
            <menu>
                <item
                    android:id="@+id/nav_setting"
                    android:icon="@drawable/ic_settings_24dp"
                    android:title="@string/nav_setting"></item>

            </menu>
        </item>
    </group>

    <!-- <group android:checkableBehavior="single">
         <item android:title="@string/nav_recycle"
             android:id="@+id/nav_recycle">
             <menu>
                 <item
                     android:id="@+id/nav_bin"
                     android:icon="@drawable/ic_bin_24dp"
                     android:title="@string/nav_bin"></item>

                 <item
                     android:id="@+id/nav_backup"
                     android:icon="@drawable/ic_backup_black_24dp"
                     android:title="@string/nav_backup"></item>

                 <item
                     android:id="@+id/nav_restore"
                     android:icon="@drawable/ic_restore_black_24dp"
                     android:title="@string/nav_restore"></item>
             </menu>
         </item>
     </group>-->

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_communicate"
            android:title="@string/nav_communicate">
            <menu>

                <!-- <item
                     android:id="@+id/nav_support"
                     android:icon="@drawable/ic_support_24dp"
                     android:title="@string/nav_support"></item>-->
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_share_black_24dp"
                    android:title="@string/nav_share"></item>

                <item
                    android:id="@+id/nav_feedback"
                    android:icon="@drawable/ic_feedback_black_24dp"
                    android:title="@string/nav_feedback"></item>

                <item
                    android:id="@+id/nav_help"
                    android:icon="@drawable/ic_help_black_24dp"
                    android:title="@string/nav_help"></item>

                <!-- <item
                     android:id="@+id/nav_send"
                     android:icon="@drawable/ic_send_black_24dp"
                     android:title="@string/nav_send"></item>-->
            </menu>
        </item>
    </group>

    <!--<group android:checkableBehavior="single">
        <item android:title="@string/nav_other"
            android:id="@+id/nav_other">
            <menu>


                <item
                    android:id="@+id/nav_feedback"
                    android:icon="@drawable/ic_feedback_black_24dp"
                    android:title="@string/nav_feedback"></item>

                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_about_24dp"
                    android:title="@string/nav_about"></item>
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_log_out_24dp"
                    android:title="@string/nav_logout"></item>
            </menu>
        </item>
    </group>-->
</menu>